--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "wadev": "node server.js"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -23,6 +24,7 @@
     "postcss": "^8.2.8",
     "sirv-cli": "^1.0.0",
     "svelte-preprocess": "^4.6.9",
-    "svelte-routing": "^1.5.0"
+    "svelte-routing": "^1.5.0",
+    "watch": "^1.0.2"
   }
 }
