--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "dependencies": {
     "node-sass": "^5.0.0",
+    "page": "^1.11.6",
     "postcss": "^8.2.8",
     "sirv-cli": "^1.0.0",
     "svelte-preprocess": "^4.6.9",
-    "svelte-routing": "^1.5.0",
     "watch": "^1.0.2"
   }
 }
